--- a/playbooks/setup_letsencrypt_https.yml
+++ b/playbooks/setup_letsencrypt_https.yml
@@ -1,24 +1,25 @@
---- 
-- name: Configuramos a donde ira la configuracion.
-  hosts: loadbalancer_ip
+---
+- name: Playbook para configurar HTTPS
+  hosts: loadbalancer
   become: yes
 
   vars_files:
     - ../vars/variables.yml
 
   tasks:
+
     - name: Desinstalar instalaciones previas de Certbot
       apt:
         name: certbot
         state: absent
 
     - name: Instalar Certbot con snap
-      snap:
-        name: certbot
-        classic: yes
-        state: present
+      command: snap install --classic certbot
 
-    - name: Solicitamos el certificado
+    - name: Crear un alias para el comando certbot
+      command: ln -s -f /snap/bin/certbot /usr/bin/certbot
+
+    - name: Solicitar y configurar certificado SSL/TLS a Let's Encrypt con certbot
       command:
         certbot --nginx \
         -m {{ certbot.email }} \
@@ -26,3 +27,6 @@
         --no-eff-email \
         --non-interactive \
         -d {{ certbot.domain }}
+
+
+  
