--- a/main.yml
+++ b/main.yml
@@ -1,9 +1,10 @@
+
 ---
-- import_playbook: playbooks/install_lamp_backend.yml
-- import_playbook: playbooks/deploy_backend.yml
-- import_playbook: playbooks/install_nfs_server.yml
-- import_playbook: playbooks/install_lamp_frontend.yml
-- import_playbook: playbooks/install_nfs_cliente.yml
-- import_playbook: playbooks/setup_loadbalanced.yml
-- import_playbook: playbooks/setup_letsencrypt_https.yml
-- import_playbook: playbooks/deploy_frontend.yml
+#- import_playbook: playbooks/install_lamp_backend.yml
+#- import_playbook: playbooks/install_lamp_frontend.yml
+#- import_playbook: playbooks/deploy_wordpress_backend.yml
+#- import_playbook: playbooks/setup_nfs_server.yml
+#- import_playbook: playbooks/setup_nfs_client.yml
+#- import_playbook: playbooks/setup_loadbalancer.yml
+#- import_playbook: playbooks/setup_letsencrypt_https.yml
+- import_playbook: playbooks/deploy_wordpress_frontend.yml
