--- a/playbooks/install_lamp_backend.yml
+++ b/playbooks/install_lamp_backend.yml
@@ -1,33 +1,40 @@
---- 
-- name: Playbook para configurar HTTPS
-  hosts: backend_ip
+---
+- name: Playbook para instalar la pila LAMP en el Backend
+  hosts: backend
   become: yes
 
   vars_files:
     - ../vars/variables.yml
 
   tasks:
-    - name: Actualizamos los repositorios
+
+    - name: Actualizar los repositorios
       apt:
         update_cache: yes
 
-    - name: Instalamos mysql-server
+    - name: Instalar el sistema gestor de bases de datos MySQL
       apt:
         name: mysql-server
         state: present
 
-    - name: Instalamos el modulo de python para mysql-server
+    - name: Instalamos el módulo de pymysql
       apt:
         name: python3-pymysql
         state: present
 
-    - name: Configuramos el /etc/mysql
+    - name: Configuramos MySQL para permitir conexiones desde cualquier interfaz
       replace:
         path: /etc/mysql/mysql.conf.d/mysqld.cnf
         regexp: 127.0.0.1
-        replace: 0.0.0.0
+        replace: "{{ ip.BACKEND_PRIVATE_IP }}"
 
-    - name: Reseteamos mysql-server
+    - name: Cambiar bind-address en mysqld.cnf
+      replace:
+        path: /etc/mysql/mysql.conf.d/mysqld.cnf
+        regexp: '^bind-address.*'
+        replace: 'bind-address = 0.0.0.0'
+
+    - name: Reiniciamos el servicio de base de datos
       service:
         name: mysql
         state: restarted
