--- a/templates/000-default.conf
+++ b/templates/000-default.conf
@@ -1,14 +1,14 @@
+ServerSignature Off
+ServerTokens Prod
+
 <VirtualHost *:80>
-    #ServerName www.example.com
-    ServerAdmin webmaster@localhost
-    DocumentRoot /var/www/html/
+        DocumentRoot /var/www/html
+        DirectoryIndex index.php index.html
 
-    DirectoryIndex index.php index.html
+        ErrorLog ${APACHE_LOG_DIR}/error.log
+        CustomLog ${APACHE_LOG_DIR}/access.log combined
 
-    <Directory /var/www/html>
-        AllowOverride All
-    </Directory>
-
-    ErrorLog ${APACHE_LOG_DIR}/error.log
-    CustomLog ${APACHE_LOG_DIR}/access.log combined
+        <Directory "/var/www/html">
+            AllowOverride All
+        </Directory>
 </VirtualHost>
