--- a/main.yml
+++ b/main.yml
@@ -2,9 +2,9 @@
 ---
 #- import_playbook: playbooks/install_lamp_backend.yml
 #- import_playbook: playbooks/install_lamp_frontend.yml
-#- import_playbook: playbooks/deploy_wordpress_backend.yml
-#- import_playbook: playbooks/setup_nfs_server.yml
-#- import_playbook: playbooks/setup_nfs_client.yml
-#- import_playbook: playbooks/setup_loadbalancer.yml
-#- import_playbook: playbooks/setup_letsencrypt_https.yml
-- import_playbook: playbooks/deploy_wordpress_frontend.yml
+- import_playbook: /home/ubuntu/practica-3.2/playbooks/deploy_wordpress_backend.yml
+- import_playbook: /home/ubuntu/practica-3.2/playbooks/setup_nfs_server.yml
+- import_playbook: /home/ubuntu/practica-3.2/playbooks/setup_nfs_client.yml
+- import_playbook: /home/ubuntu/practica-3.2/playbooks/setup_loadbalancer.yml
+- import_playbook: /home/ubuntu/practica-3.2/playbooks/setup_letsencrypt_https.yml
+- import_playbook: /home/ubuntu/practica-3.2/playbooks/deploy_wordpress_frontend.yml
