--- a/playbooks/deploy_wordpress_backend.yml
+++ b/playbooks/deploy_wordpress_backend.yml
@@ -4,7 +4,7 @@
   become: yes
 
   vars_files:
-    - ../vars/variables.yml
+    - /home/ubuntu/practica-3.2/vars/variables.yaml
 
   tasks:  
     
