--- a/playbooks/setup_loadbalancer.yml
+++ b/playbooks/setup_loadbalancer.yml
@@ -3,7 +3,7 @@
   hosts: loadbalancer
   become: yes
   vars_files:
-    - ../vars/variables.yml
+    - /home/ubuntu/practica-3.2/vars/variables.yaml
   tasks:
     - name: Actualizar sistema
       apt:
@@ -22,7 +22,7 @@
 
     - name: Copiar configuración de Nginx
       copy:
-        src: ../templates/loadbalancer.conf
+        src: /home/ubuntu/practica-3.2/templates/load-balancer.conf
         dest: /etc/nginx/sites-available/loadbalancer.conf
 
     - name: Reemplazar valores en configuración de Nginx
