--- a/playbooks/setup_nfs_server.yml
+++ b/playbooks/setup_nfs_server.yml
@@ -3,7 +3,7 @@
   become: yes
   
   vars_files:
-    - ../vars/variables.yml
+    - /home/ubuntu/practica-3.2/vars/variables.yaml
 
   tasks:
     - name: Instalar NFS Server
