--- a/playbooks/deploy_wordpress_frontend.yml
+++ b/playbooks/deploy_wordpress_frontend.yml
@@ -4,9 +4,19 @@
   become: yes
 
   vars_files:
-    - /home/ubuntu/practica-3.2/vars/variables.yaml
+    - ../vars/variables.yaml
+
+
 
   tasks:
+
+  
+    - name: Borrar carpeta de WordPress
+      shell: |
+        rm -rf /var/www/html/*
+      become: yes
+      
+
 
     - name: Descargar la utilidad WP-CLI
       get_url:
